@@ -10,7 +10,7 @@
 
   <groupId>com.impactupgrade</groupId>
   <artifactId>nucleus-parent</artifactId>
-  <version>1.0.20-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Nonprofit Nucleus: Parent</name>
@@ -33,16 +33,23 @@
   </developers>
 
   <properties>
+    <version.java>16</version.java>
+
+    <version.b2>3.1.0</version.b2>
     <version.cxf>3.3.10</version.cxf>
+    <version.gson>2.8.7</version.gson>
     <version.guava>30.1.1-jre</version.guava>
+    <version.hibernate>5.5.6.Final</version.hibernate>
     <!-- TODO: Would love to upgrade Jersey/Jetty and start using Jakarta APIs, but CXF (even 3.4) doesn't support it (entirely) yet... -->
     <version.jersey>2.34</version.jersey>
     <version.jetty>9.4.40.v20210413</version.jetty>
+    <version.jruby>9.2.19.0</version.jruby>
     <version.log4j>2.14.1</version.log4j>
     <version.mail>1.6.2</version.mail>
+    <version.postgres>42.2.23</version.postgres>
     <version.spring>4.1.0.RELEASE</version.spring>
-    <version.stripe>20.47.1</version.stripe>
-    <version.twilio>8.11.0</version.twilio>
+    <version.stripe>20.66.0</version.stripe>
+    <version.twilio>8.17.0</version.twilio>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -53,7 +60,7 @@
     <dependency>
       <groupId>com.sun.xml.ws</groupId>
       <artifactId>jaxws-rt</artifactId>
-      <version>3.0.0</version>
+      <version>3.0.2</version>
       <type>pom</type>
       <exclusions>
         <!-- Conflicts with what we're already using -->
@@ -66,7 +73,7 @@
     <dependency>
       <groupId>com.sun.xml.ws</groupId>
       <artifactId>rt</artifactId>
-      <version>3.0.0</version>
+      <version>3.0.2</version>
       <exclusions>
         <!-- Conflicts with what we're already using -->
         <exclusion>
@@ -148,12 +155,12 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>5.4.30.Final</version>
+      <version>${version.hibernate}</version>
     </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>42.2.19</version>
+      <version>${version.postgres}</version>
     </dependency>
 
     <!-- 3rd party SDKs -->
@@ -176,7 +183,7 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.8.6</version>
+      <version>${version.gson}</version>
     </dependency>
     <dependency>
       <groupId>com.impactupgrade.integration</groupId>
@@ -251,19 +258,19 @@
     <dependency>
       <groupId>org.jruby</groupId>
       <artifactId>jruby</artifactId>
-      <version>9.2.11.1</version>
+      <version>${version.jruby}</version>
     </dependency>
 
     <!-- for storing any file backups -->
     <dependency>
       <groupId>com.backblaze.b2</groupId>
       <artifactId>b2-sdk-core</artifactId>
-      <version>3.1.0</version>
+      <version>${version.b2}</version>
     </dependency>
     <dependency>
       <groupId>com.backblaze.b2</groupId>
       <artifactId>b2-sdk-httpclient</artifactId>
-      <version>3.1.0</version>
+      <version>${version.b2}</version>
     </dependency>
 
     <!-- logging -->
@@ -321,9 +328,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>15</source>
-          <target>15</target>
-          <compilerArgs>--enable-preview</compilerArgs>
+          <source>${version.java}</source>
+          <target>${version.java}</target>
         </configuration>
       </plugin>
       <plugin>
@@ -347,8 +353,7 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.2.0</version>
         <configuration>
-          <release>15</release>
-          <additionalOptions>--enable-preview</additionalOptions>
+          <release>${version.java}</release>
         </configuration>
       </plugin>
 
